# pyot

./: .gitignore  Cargo.toml  README.md  README_EN.md  pyproject.toml
example/: main.py
python/pyot/: __init__.py  __init__.pyi
src/: lib.rs
