[project]
name = "pyot"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "theocheng", email = "zlz_gty@foxmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"


[tool.rye.scripts]
"dev" = { cmd = "python example/main.py" }

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "pyot._lowlevel"
features = ["pyo3/extension-module"]
